<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>br.com.fiap</groupId>
	<artifactId>CompliCheck</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>CompliCheck</name>
	<description>StartUp for compliance</description>
	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<cucumber.version>7.16.1</cucumber.version>
		<rest-assured.version>5.4.0</rest-assured.version>
		<surefire.version>3.2.5</surefire.version>
		<mysql-connector-j.version>8.0.33</mysql-connector-j.version>
		<h2.version>2.2.224</h2.version>
		<junit-platform.version>1.10.2</junit-platform.version>
		<jackson-databind.version>2.15.4</jackson-databind.version>
		<commons-io.version>2.16.1</commons-io.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.cucumber</groupId>
				<artifactId>cucumber-bom</artifactId>
				<version>${cucumber.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.rest-assured</groupId>
				<artifactId>rest-assured-bom</artifactId>
				<version>${rest-assured.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>${mysql-connector-j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>4.5.0</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit-platform-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-spring</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-schema-validator</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-databind.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version> <!-- Garante que você esteja usando uma versão compatível com Java 21 -->
				<configuration>

					<target>${java.version}</target>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.version}</version>
				<configuration>
					<includes>
						<include>**/CucumberTestRunner.java</include>
					</includes>
					<!-- ESSAS CONFIGURAÇÕES SÃO IMPORTANTES PARA JUnit 5/Cucumber -->
					<testSourceDirectory>${project.build.testSourceDirectory}</testSourceDirectory>
					<useModulePath>false</useModulePath>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.io=ALL-UNNAMED
						--add-opens java.base/java.net=ALL-UNNAMED
						--add-opens java.base/java.nio=ALL-UNNAMED
						--add-opens java.base/java.security=ALL-UNNAMED
						--add-opens java.base/java.text=ALL-UNNAMED
						--add-opens java.desktop/java.awt.font=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
						--add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
						--add-opens jdk.jartool/sun.tools.jar=ALL-UNNAMED
						--add-opens jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED
						-Dspring.profiles.active=test
					</argLine>
				</configuration>
				<dependencies>
					<!-- ESTA É A DEPENDÊNCIA DO PROVIDER QUE DEVE ESTAR AQUI! -->
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>${junit-platform.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>